--- a/src/index.css
+++ b/src/index.css
@@ -129,15 +129,16 @@
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    color: hsl(var(--foreground));
-    background-color: hsl(var(--background));
+    color: hsl(var(--foreground)) !important;
+    background-color: hsl(var(--background)) !important;
   }
 
   #root {
     min-height: 100vh;
     width: 100%;
-    color: hsl(var(--foreground));
-    background-color: hsl(var(--background));
+    color: hsl(var(--foreground)) !important;
+    background-color: hsl(var(--background)) !important;
+    display: block;
   }
 }
 
